--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 spring.security.user.name=najeh
 spring.security.user.password=pwd123
 spring.security.user.role=USER
-spring.datasource.url=jdbc:mysql://localhost/easy_money?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/test_dump?useUnicode=yes&characterEncoding=UTF-8&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.default-url=jdbc:mysql://localhost:3306/
-spring.datasource.default-driver-name=com.mysql.jdbc.Driver
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.default-driver-name=com.mysql.cj.jdbc.Driver
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 mail.smtp.server=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.user=xyz.ytk.xyz@gmail.com
-mail.smtp.password=1995@jawad
-mail.smtp.from=xyz.ytk.xyz@gmail.com
-mail.smtp.starttls.enable=false
+mail.smtp.user=db.backupper@gmail.com
+mail.smtp.password=pwd@@1995
+mail.smtp.from=db.backupper@gmail.com
+mail.smtp.to=db.backupper@gmail.com
+mail.smtp.starttls.enable=true
+mail.smtp.ssl.trust=smtp.gmail.com
+mail.smtp.auth=true
 mail.use.tls=true
