changed TO email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ mail.smtp.port=587
 mail.smtp.user=db.backupper@gmail.com
 mail.smtp.password=pwd@@1995
 mail.smtp.from=db.backupper@gmail.com
-mail.smtp.to=db.backupper@gmail.com
+mail.smtp.to=yo.najeh@gmail.com
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
 mail.smtp.auth=true
